# Amberlith

./: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/miniaudio/: CMakeLists.txt
dependencies/random123/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
dependencies/zstd/: CMakeLists.txt
src/: main.cpp
src/common_types/: native_types.hpp  native_types_nix.hpp  native_types_win.hpp  prng.cpp
src/filesystem/: simple_fs.hpp
src/gamestate/: dcon_generated.txt  game_scene.cpp  system_state.cpp  system_state.hpp
src/graphics/: asvg.cpp  opengl_wrapper.cpp  opengl_wrapper.hpp
src/gui/: gui_element_types.cpp  main_menu.cpp  ui_state.hpp
src/random123/features/: sse.h
src/sound/: sound.hpp  sound_nix.cpp  sound_nix.hpp  sound_win.cpp  sound_win.hpp
src/text/: parsers.hpp
src/window/: window.hpp  window_nix.cpp
